// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > renders the bridge-unavailable variant with retry CTA 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center gap-2 p-6 text-center py-2"
  >
    <svg
      class="lucide lucide-wifi-off theme-text-muted w-9 h-9 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 20h.01"
      />
      <path
        d="M8.5 16.429a5 5 0 0 1 7 0"
      />
      <path
        d="M5 12.859a10 10 0 0 1 5.17-2.69"
      />
      <path
        d="M19 12.859a10 10 0 0 0-2.007-1.523"
      />
      <path
        d="M2 8.82a15 15 0 0 1 4.177-2.643"
      />
      <path
        d="M22 8.82a15 15 0 0 0-11.288-3.764"
      />
      <path
        d="m2 2 20 20"
      />
    </svg>
    <p
      class="theme-text-primary text-sm font-medium"
    >
      Bridge data unavailable
    </p>
    <p
      class="theme-text-muted text-xs opacity-70"
    >
      Could not fetch the current bridge limit. Please retry.
    </p>
    <button
      class="theme-primary-button mt-2 px-4 py-1.5 rounded-lg text-xs font-medium transition-all hover:scale-[1.03]"
      type="button"
    >
      Retry
    </button>
  </div>
</DocumentFragment>
`;

exports[`EmptyState > renders the chat-list empty variant (no history) 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center gap-2 p-6 text-center"
  >
    <svg
      class="lucide lucide-message-square theme-text-muted w-9 h-9 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
      />
    </svg>
    <p
      class="theme-text-primary text-sm font-medium"
    >
      No conversations yet
    </p>
    <p
      class="theme-text-muted text-xs opacity-70"
    >
      Start chatting to see your history here
    </p>
    <button
      class="theme-primary-button mt-2 px-4 py-1.5 rounded-lg text-xs font-medium transition-all hover:scale-[1.03]"
      type="button"
    >
      New Conversation
    </button>
  </div>
</DocumentFragment>
`;

exports[`EmptyState > renders the chat-list search-empty variant 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center gap-2 p-6 text-center"
  >
    <svg
      class="lucide lucide-search theme-text-muted w-9 h-9 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="11"
        cy="11"
        r="8"
      />
      <path
        d="m21 21-4.3-4.3"
      />
    </svg>
    <p
      class="theme-text-primary text-sm font-medium"
    >
      No conversations found
    </p>
    <p
      class="theme-text-muted text-xs opacity-70"
    >
      No results for "stellar"
    </p>
    <button
      class="theme-primary-button mt-2 px-4 py-1.5 rounded-lg text-xs font-medium transition-all hover:scale-[1.03]"
      type="button"
    >
      Clear search
    </button>
  </div>
</DocumentFragment>
`;

exports[`EmptyState > renders the transaction-history empty variant 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center gap-2 p-6 text-center py-3"
  >
    <svg
      class="lucide lucide-coins theme-text-muted w-9 h-9 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="6"
      />
      <path
        d="M18.09 10.37A6 6 0 1 1 10.34 18"
      />
      <path
        d="M7 6h1v4"
      />
      <path
        d="m16.71 13.88.7.71-2.82 2.82"
      />
    </svg>
    <p
      class="theme-text-primary text-sm font-medium"
    >
      No transactions yet
    </p>
    <p
      class="theme-text-muted text-xs opacity-70"
    >
      Deposits, payouts, risk checks, and notes will appear here.
    </p>
  </div>
</DocumentFragment>
`;

exports[`EmptyState > renders without optional props (icon + title only) 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center gap-2 p-6 text-center"
  >
    <svg
      class="lucide lucide-message-square theme-text-muted w-9 h-9 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
      />
    </svg>
    <p
      class="theme-text-primary text-sm font-medium"
    >
      Nothing here
    </p>
  </div>
</DocumentFragment>
`;
